--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -21,3 +21,15 @@
 
 
 \usepackage[table,xcdraw]{xcolor}
+
+
+
+
+% super long table
+
+\usepackage{pdflscape} % For rotated pages
+
+\setlength{\arrayrulewidth}{0.5mm} % Optional: to thicken table lines
+\renewcommand{\arraystretch}{1.5} % Optional: to increase row height
+
+
