--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,8 @@
 \newtheorem{remark}[theorem]{Remark}
 \newtheorem{axiom}[theorem]{Axiom}
 
+\renewcommand{\proofname}{Proof}
+
 \input{preamble/fonts.tex}
 
 \input{styles/idc.tex}
