--- a/siumatgwoon.tex
+++ b/siumatgwoon.tex
@@ -69,7 +69,7 @@
 
 \input{chapters/01-epigraphs.tex}
 \input{chapters/02-definitions.tex}
-\input{chapters/03-examples.tex}
-\input{chapters/04-synonyms.tex}
+% \input{chapters/03-examples.tex}
+% \input{chapters/04-synonyms.tex}
 
 \end{document}
