--- a/siumatgwoon.tex
+++ b/siumatgwoon.tex
@@ -68,8 +68,8 @@
 
 
 \input{chapters/01-epigraphs.tex}
-\input{chapters/02-definitions.tex}
-% \input{chapters/03-examples.tex}
+% \input{chapters/02-definitions.tex}
+\input{chapters/03-examples.tex}
 % \input{chapters/04-synonyms.tex}
 
 \end{document}
