--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -21,6 +21,8 @@
 
 
 \usepackage[table,xcdraw]{xcolor}
+\definecolor{lightblue}{rgb}{0.8,0.9,1}
+\newcommand{\elcol}[3]{\cellcolor{#1}\begin{tabular}{@{}c@{}}#2\\[0.3em]#3\end{tabular}}
 
 
 
