table colour fixing

--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -21,7 +21,12 @@
 
 
 \usepackage[table,xcdraw]{xcolor}
-\definecolor{lightblue}{rgb}{0.8,0.9,1}
+ \definecolor{stone}{rgb}{0.7,0.9,0.7} % light green
+\definecolor{lightblue}{rgb}{0.8,0.9,1} % light blue
+\definecolor{liquid}{rgb}{1,0.8,0.9} % light pink
+\definecolor{gold}{rgb}{1,0.9,0.7} % light yellow
+\definecolor{gas}{rgb}{0.7,0.8,1} % light blue
+
 \newcommand{\elcol}[3]{\cellcolor{#1}\begin{tabular}{@{}c@{}}#2\\[0.3em]#3\end{tabular}}
 
 
