--- a/siumatgwoon.tex
+++ b/siumatgwoon.tex
@@ -67,9 +67,9 @@
 \maketitle
 
 
-\input{chapters/01-epigraphs.tex}
-\input{chapters/02-definitions.tex}
+% \input{chapters/01-epigraphs.tex}
+% \input{chapters/02-definitions.tex}
 \input{chapters/03-examples.tex}
-\input{chapters/04-synonyms.tex}
+% \input{chapters/04-synonyms.tex}
 
 \end{document}
