--- a/siumatgwoon.tex
+++ b/siumatgwoon.tex
@@ -47,6 +47,11 @@
 \input{preamble/toc.tex}
 
 % *-----------------------------------------------------------------------*
+% | Customised symbols
+% *-----------------------------------------------------------------------*
+\input{preamble/math_symbols.tex}
+
+% *-----------------------------------------------------------------------*
 % | Document begins                                                       |
 % *-----------------------------------------------------------------------*
 
@@ -59,7 +64,7 @@
 % Avoid overfull hbox
 \sloppy
 
-% Initialize jyutcitzi processing
+% % Initialize jyutcitzi processing
 \jcz{}
 
 % Generate table of contents
